<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_description</name>
  <version>0.0.0</version>

  <description>
    ROS 2 description package for the Puzzlebot Jetson Lidar Edition. Contains the URDF/Xacro
    robot model (base, wheels, caster, and RPLidar sensor), 3D mesh assets, an RViz2
    configuration, and a launch file for visualizing the robot in RViz2 and Gazebo simulations.
  </description>

  <maintainer email="ulises.carrizalez@outlook.com">Ulises Carrizalez Lerín</maintainer>
  <maintainer email="hela_molina@gmail.com">Laura Helena Molina Jimenez</maintainer>
  <maintainer email="zoe.rebolledo@gmail.com">Karla Zoé Rebolledo Argueta</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
