<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_gazebo</name>
  <version>0.0.0</version>

  <description>
    ROS 2 Gazebo simulation package for the Puzzlebot. Contains a custom maze world,
    a ROS-Gazebo topic bridge configuration, and a launch file to spawn and simulate
    the Puzzlebot in a Gazebo environment.
  </description>

  <maintainer email="ulises.carrizalez@outlook.com">Ulises Carrizalez Lerín</maintainer>
  <maintainer email="hela_molina@gmail.com">Laura Helena Molina Jimenez</maintainer>
  <maintainer email="zoe.rebolledo@gmail.com">Karla Zoé Rebolledo Argueta</maintainer>

  <license>MIT</license>>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>puzzlebot_description</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
