<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_navigation2</name>
  <version>0.0.0</version>
  <description>
    ROS 2 navigation and mapping package for the Puzzlebot. Contains Nav2 and SLAM Toolbox
    configurations, a pre-built maze map, RViz2 setups for both navigation and SLAM, and
    launch files for running autonomous navigation and online/offline SLAM workflows.
  </description>

  <maintainer email="ulises.carrizalez@outlook.com">Ulises Carrizalez Lerín</maintainer>
  <maintainer email="hela_molina@gmail.com">Laura Helena Molina Jimenez</maintainer>
  <maintainer email="zoe.rebolledo@gmail.com">Karla Zoé Rebolledo Argueta</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>puzzlebot_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
